deploy/azure/sample/overlay/develop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo
spec:
  selector:
    app: demo
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
